<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tickets"
            android:icon="@drawable/ic_tickets"
            android:title="@string/menu_tickets" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_bot"
            android:icon="@drawable/ic_bot"
            android:title="@string/menu_bot" />

    </group>

    <group android:id="@+id/bottom_group_id">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>