<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="6dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:baselineAligned="false"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="14dp"
        app:srcCompat="@drawable/ic_person2" />


    <TextView
        android:id="@+id/textViewHeaderTitle"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/imageView"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textViewHeaderSubtitle"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/textViewHeaderTitle"
        android:text="@string/nav_header_subtitle"
        android:textAlignment="center" />

</RelativeLayout>